Update chart descriptions

--- a/charts/alertmanager-discord/Chart.yaml
+++ b/charts/alertmanager-discord/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: alertmanager-discord
-description: A Helm chart for Kubernetes
+description: Alertmanager to Discord webhook handler
 type: application
 version: 0.1.0
 appVersion: "latest"
