--- a/charts/etcd/Chart.yaml
+++ b/charts/etcd/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: etcd
-description: A Helm chart for Kubernetes
+description: ETCD distributed storage
 type: application
 version: 0.4.0
 appVersion: 3.5.0
