--- a/ct.yaml
+++ b/ct.yaml
@@ -2,9 +2,12 @@
 remote: origin
 target-branch: main
 chart-dirs:
-  - charts/etcd
+  - charts
 chart-repos:
   - rovergulf-ops=https://rovergulf-ops.github.io/helm-charts/
+#  - rovergulf=http://???.rovergulf.net/
 
 # revert after 4 minutes of failures
-helm-extra-args: --timeout 240s --atomic
+#helm-extra-args:
+#  - --timeout 240s
+#  - --atomic
