Fix lint issues

--- a/charts/alertmanager-discord/Chart.yaml
+++ b/charts/alertmanager-discord/Chart.yaml
@@ -2,6 +2,14 @@ apiVersion: v2
 name: alertmanager-discord
 description: Alertmanager to Discord webhook handler
 type: application
-version: 0.1.0
+version: 0.1.1
 appVersion: "latest"
 home: https://github.com/benjojo/alertmanager-discord
+maintainers:
+  - name: scDisorder
+    email: d@rovergulf.net
+keywords:
+  - helm
+  - alertmanager-discord
+  - helm-charts
+  - charts
