--- a/charts/alertmanager-discord/values.yaml
+++ b/charts/alertmanager-discord/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: benjojo/alertmanager-discord
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+#  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -61,19 +61,19 @@ resources: {}
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+#  limits:
+#    cpu: 100m
+#    memory: 128Mi
+#  requests:
+#    cpu: 100m
+#    memory: 128Mi
 
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+#  targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
