--- a/charts/chartmuseum/Chart.yaml
+++ b/charts/chartmuseum/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: chartmuseum
 description: Helm's Chartmseum Chart
 type: application
-version: 0.1.0
+version: 0.1.1
 appVersion: "v0.14.0"
 maintainers:
-  - name: Dmitrii Limonov
+  - name: scDisorder
     email: d@rovergulf.net
 home: https://chartmuseum.com
 sources:
