--- a/charts/etcd/Chart.yaml
+++ b/charts/etcd/Chart.yaml
@@ -5,7 +5,7 @@ type: application
 version: 0.4.1
 appVersion: 3.5.4
 maintainers:
-  - name: Dmitrii Limonov
+  - name: scDisorder
     email: d@rovergulf.net
 sources:
   - https://github.com/etcd-io/etcd
