--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -35,8 +35,10 @@ etcd:
   token: ""
   logger: zap
   cluster:
-    state: "new" # may be 'new' or 'existing'
-  metrics: extensive # options are 'basic' and 'extensive'
+    # may be 'new' or 'existing'
+    state: "new"
+  # options are 'basic' and 'extensive'
+  metrics: extensive
 
 serviceAccount:
   # Specifies whether a service account should be created
