[etcd] - Bump 3.5.4 app version (#1)
* [etcd] - Bump 3.5.4 app version

* Add README files

* Add ct.yaml

* etcd - use default app image tag

* try lint without changes check

* try to skip lint errors

* Update READMEs

* Update gh workflows

* Fix lint issues

* Do not run test workflow steps

--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -9,7 +9,7 @@ image:
   repository: gcr.io/etcd-development/etcd
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v3.5.0"
+  tag: "v3.5.4"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -35,8 +35,10 @@ etcd:
   token: ""
   logger: zap
   cluster:
-    state: 'new' # may be 'new' or 'existing'
-  metrics: extensive # options are 'basic' and 'extensive'
+    # may be 'new' or 'existing'
+    state: "new"
+  # options are 'basic' and 'extensive'
+  metrics: extensive
 
 serviceAccount:
   # Specifies whether a service account should be created
