--- a/charts/etcd/Chart.yaml
+++ b/charts/etcd/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: etcd
 description: ETCD distributed storage
 type: application
-version: 0.4.0
-appVersion: 3.5.0
+version: 0.4.1
+appVersion: 3.5.4
 maintainers:
-  - name: Dmitrii Limonov
+  - name: scDisorder
     email: d@rovergulf.net
 sources:
   - https://github.com/etcd-io/etcd
