[etcd] - set storage class to default

--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -148,7 +148,7 @@ persistentVolume:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: "premium-rwo"
+  storageClass: default
 
 extraEnvs: []
 
