--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -32,7 +32,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --config ct.yaml
+        run: ct lint --config ct.yaml --check-version-increment=false
 
 #      - name: Create kind cluster
 #        uses: helm/kind-action@v1.2.0
