chartmuseum - Migrate to v0.15.0

--- a/charts/chartmuseum/templates/deployment.yaml
+++ b/charts/chartmuseum/templates/deployment.yaml
@@ -68,6 +68,9 @@ spec:
             - --basic-auth-user={{ .Values.basicAuth.basicAuthUser }}
             - --basic-auth-pass={{ .Values.basicAuth.basicAuthPassword }}
             {{- end}}
+            {{- if .Values.metrics.enabled }}
+            - --enable-metrics=true
+            {{- end}}
           ports:
             - name: http
               containerPort: 8080
