--- a/charts/busybox/values.yaml
+++ b/charts/busybox/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/rovergulf/busybox
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.1.0"
+  tag: "v0.2.0"
 
 imagePullSecrets: []
 nameOverride: ""
